--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,14 @@ services:
     build: ./node
     ports:
       - "3000:3000"
-    # depends_on:
-    #   - redis
-    # env_file:
-    #   node.env
     volumes:
       - "./node:/usr/src/app"
     working_dir:
       /usr/src/app
+    depends_on:
+      - mongo
+  mongo:
+    image: mongo
+    container_name: mongo
+    ports:
+    - "27017:27017"
